--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Mutual Funds Guide
 email: ak.g@icloud.com
 description: >- # this means to ignore newlines until "baseurl:"
   A guide that gives you information, instructions and wisdom to invest in Indian Mutual Fund Schemes.
-baseurl: "/nrimf" # the subpath of your site, e.g. /blog
-url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/mutualfundsnri" # the subpath of your site, e.g. /blog
+url: "habsg.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: _mutual_funds_
 github_username:  habsg
 
